...
          onTap: () => Navigator.pop(context),
          child: const Icon(Icons.arrow_back_ios, color: Colors.black),
        ),
        actions: isLogin
            ? [
                IconButton(
                  key: const Key('resume_add_btn'),
                  icon: const Icon(Icons.add, color: Colors.black, size: 28),
                  onPressed: _createResume,
                )
              ]
            : null,
      ),
...
              : _body(),
    );
  }

  Widget _body() {
    return SingleChildScrollView(
      key: const Key('resume_list_scroll'),
      padding: const EdgeInsets.all(16),
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          _banner(),
          const SizedBox(height: 20),
...
